syntax = "proto3";

enum UserRole{
    simply_user = 0;
    admin_user = 1;
}

message RegistrationRequest{
    string username = 1;
    string password = 2;
    string accept_password = 3;
    UserRole role = 4;
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message UserResponse{
    string message = 1;
    bool success = 2;
    string role = 3;
}

service UserService{
    rpc Registration(RegistrationRequest) returns (UserResponse);
    rpc Login(LoginRequest) returns (UserResponse);
}